# charset_normalizer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  UPGRADE.md  build-requirements.txt  ci-requirements.txt  dev-requirements.txt  noxfile.py  osv-scanner.toml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  wrong_charset.md
.github/workflows/: cd.yml  chardet-bc.yml  ci.yml  codeql.yml  detector-coverage.yml  integration.yml  lint.yml  mypyc-verify.yml  performance.yml  python-publish.yml  run-tests.yml  scorecards.yml
_mypyc_hook/: backend.py
bench/: README.md  bench.py
charset_normalizer/: __init__.py  api.py  cd.py  constant.py  encoding.py  hook.py  legacy.py  md.py  models.py  normalizer.py  probe_chaos.py  probe_coherence.py  probe_inherent_sign.py  probe_words.py  unicode.py  unicodedata2.pyi  utils.py  version.py
charset_normalizer/assets/: __init__.py  frequencies.json  letters_frequencies.html
charset_normalizer/cached_property/: __init__.py
charset_normalizer/cli/: normalizer.py
data/: sample-hebrew.txt  sample.1.ar.srt  sample.1.fr.srt  sample.1.gr.srt  sample.1.he.srt  sample.1.hi.srt  sample.1.ru.srt  sample.2.ar.srt  sample.3.ar.srt  sample.4.ar.srt  sample.5.ar.srt
docs/: advanced_search.rst  api.rst  conf.py  getstarted.rst  handling_result.rst  index.rst  miscellaneous.rst  requirements.txt  support.rst  why_migrate.rst
docs/community/: faq.rst  featured.rst  speedup.rst  why_migrate.rst
docs/user/: advanced_search.rst  cli.rst  miscellaneous.rst  new_encoding.rst  support.rst
paper/: README.md  features.py
src/charset_normalizer/: api.py  cd.py  constant.py  md.py  models.py  utils.py  version.py
src/charset_normalizer/cli/: __main__.py
test/: test_cli.py  test_detect_legacy.py  test_language.py  test_on_byte.py  test_on_file.py  test_probe_chaos.py  test_probe_coherence.py  test_unicode_helper.py
tests/: test_base_detection.py  test_cli.py  test_coherence_detection.py  test_detect_legacy.py  test_edge_case.py  test_full_detection.py  test_inherent_sign.py  test_isbinary.py  test_language.py  test_large_payload.py  test_logging.py  test_mess_detection.py  test_normalize_fp.py  test_on_byte.py  test_on_file.py  test_preemptive_detection.py  test_probe_chaos.py  test_probe_coherence.py  test_thread_safety.py  test_unicode_helper.py  test_utils.py
